# biblia-cli-rs

./: Cargo.toml  Makefile  README.md
src/: main.rs
