[package]
name = "biblia-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.15"
serde_json = "1.0.114"
strsim = "0.11.0"
textwrap = "0.16.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
proc-macro2 = "1.0.78"
dotenv = "0.15.0"
regex = "1.10.4"
